[package]
name = "gbemu-web"
version = "0.1.0"
authors = ["Takeshi Masumoto <take44444.general@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
gbemu = { path = "../gb-emu" }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
rodio = { version = "0.17.3", default-features = false, features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.3"
